--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>Clerksy</title>
     <link rel="stylesheet" href="./css/normalize.css">
     <link rel="stylesheet" href="./css/fonts.css">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/style-min.css">
+    <!-- <link rel="stylesheet" href="./css/style.css"> -->
 </head>
 <body>
     
