new button added in the footer

--- a/index.html
+++ b/index.html
@@ -247,6 +247,7 @@
                        <li class="footer__nav--item"><a class="footer__nav--link" href="#">GDPR</a></li>
                        <li class="footer__nav--item"><a class="footer__nav--link" href="#">Careers</a></li>
                        <li class="footer__nav--item"><a class="footer__nav--link" href="#">Press Kit</a></li>
+                       <li style="display: none;" class="footer__nav--item"><button>Click me!</button></li>
                    </ul>
                 </nav>
             </div>
